Added adding flashcards and flashcard settings

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".SignUp" />
-        <activity android:name=".UserPage"></activity>
+        <activity android:name=".UserPage" />
+        <activity android:name=".UserMenu" />
+        <activity android:name=".FlashcardInitSettings"></activity>
     </application>
 
 </manifest>
