--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,12 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'com.android.support:design:26.1.0'
+    //Design Library for Coordinator Layout and Toolbars
+//    compile 'com.android.support:design:27.0.2'
+    compile 'com.github.ittianyu:BottomNavigationViewEx:1.2.4'
+    compile "com.android.support:design:26.+"
 }
+
 
 
 
