--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".searchFlashcards" />
         <activity android:name=".chooseAFlashcard" />
         <activity android:name=".Home.HomeActivity" />
+        <activity android:name=".Setting.SettingActivity"/>
             <activity android:name=".AboutUsActivity" ></activity>
 
     </application>
