Added Profile Tab

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         <activity android:name=".chooseAFlashcard" />
         <activity android:name=".Home.HomeActivity" />
         <activity android:name=".Setting.SettingActivity"/>
-            <activity android:name=".AboutUsActivity" ></activity>
+        <activity android:name=".Profile.ProfileActivity"/>
+        <activity android:name=".AboutUsActivity" ></activity>
 
     </application>
 
