--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         <activity android:name=".UserMenu" />
         <activity android:name=".FlashcardInitSettings" />
         <activity android:name=".ViewFlashCards" />
-        <activity android:name=".searchFlashcards" />
+        <activity android:name=".TestingActivity" />
         <activity android:name=".chooseAFlashcard" />
         <activity android:name=".Home.HomeActivity" />
         <activity android:name=".Setting.SettingActivity" />
