Made a new view on flashcards with recyclerview and cardview.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         <activity android:name=".Setting.SettingActivity" />
         <activity android:name=".Profile.ProfileActivity" />
         <activity android:name=".ManageSet.ManageSetActivity" />
-        <activity android:name=".AboutUsActivity" />
+        <activity android:name=".MakeSet.MakeSetActivity" />
         <activity android:name=".Search.SearchActivity"></activity>
     </application>
 
