Added dialog fragment for speed round, set up speed round too.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     compile 'com.github.ittianyu:BottomNavigationViewEx:1.2.4'
 //    compile "com.android.support:design:26.+"
 
+    //easy card flip dependency
+    compile 'com.wajahatkarim3.EasyFlipView:EasyFlipView:2.0.5'
+
     //recycler dependency
     compile 'com.android.support:recyclerview-v7:27.0.2'
     //cardview dependency
@@ -41,6 +44,8 @@ dependencies {
 
 
 }
+
+
 
 
 
