--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Feb 20 20:22:05 PST 2018
-sdk.dir=C\:\\Users\\Hannah\\AppData\\Local\\Android\\Sdk
+#Fri Feb 23 03:27:19 PST 2018
+sdk.dir=C\:\\Users\\along002\\AppData\\Local\\Android\\Sdk
