--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,10 +25,10 @@
         <activity android:name=".chooseAFlashcard" />
         <activity android:name=".Home.HomeActivity" />
         <activity android:name=".Setting.SettingActivity" />
-        <activity android:name=".Profile.ProfileActivity" />
+        <activity android:name=".Search.SearchActivity" />
         <activity android:name=".ManageSet.ManageSetActivity" />
         <activity android:name=".MakeSet.MakeSetActivity" />
-        <activity android:name=".Search.SearchActivity" />
+        <activity android:name=".Search1.SearchActivity1" />
         <activity android:name=".CardGames.CardFlipPreviewActivity" />
         <activity android:name=".CardGames.SpeedRoundActivity"></activity>
     </application>
