--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,10 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        //renderscript for bluring images
+        renderscriptTargetApi 18
+        renderscriptSupportModeEnabled true
+
     }
     buildTypes {
         release {
@@ -44,6 +48,8 @@ dependencies {
 
 
 }
+
+
 
 
 
